--- a/src/plant_care/templates/plant_task_overdue_warnings.html
+++ b/src/plant_care/templates/plant_task_overdue_warnings.html
@@ -12,7 +12,7 @@
         <div class="container mt-3">
             <div class="d-flex flex-column align-items-center">
                 <br>
-                <p class="view-header fs-3 text-center">❗ Overdue Care Tasks ❗</p>
+                <p class="view-header fs-3 text-center">⚠️ Overdue Care Tasks ⚠️</p>
                 <br>
 
             </div>
