Back button snippet, fixed date validation and added search bar for PerformTaskView

--- a/src/plant_care/templates/base.html
+++ b/src/plant_care/templates/base.html
@@ -82,7 +82,7 @@
         <div id="footer">
             <div class="container-fluid d-flex justify-content-between align-items-center">
                 <div>
-                    <a href="#"><img src="{% static 'img/github.svg' %}" alt="GitHub" style="width: 48px; height: 48px;"></a>
+                    <a href="https://github.com/JanaBergl/django-project" target="_blank"><img src="{% static 'img/github.svg' %}" alt="GitHub" style="width: 48px; height: 48px;"></a>
                 </div>
 
                 <div class="d-flex justify-content-start align-items-center me-3 ms-3">
