--- a/src/plant_care/templates/plant_perform_tasks_list_page_template.html
+++ b/src/plant_care/templates/plant_perform_tasks_list_page_template.html
@@ -9,14 +9,21 @@
         <div class="container mt-3">
         <div class="d-flex flex-column align-items-center">
             <br>
-            <div class="d-flex justify-content-center w-75 mb-1">
-                <p class="fs-3 text-center">🪴 Select plant and task 🪴</p>
+            <div class="d-flex justify-content-center w-75">
+                <a class="view-header fs-3 m-0 text-decoration-none text-center" href="{% url 'plant_care:perform-tasks' %}">🪴 Select plant and task 🪴</a>
             </div>
             <br>
         </div>
+        <div class="d-flex justify-content-end w-75">
+                <form method="get" class="d-flex" style="width: auto;" action="{% url 'plant_care:perform-tasks' %}">
+                    <input type="text" name="filter" placeholder="Search plant or group"
+                           value="{{ request.GET.filter }}" class="text-center form-control">
+                    <button type="submit" class="btn ms-2 btn-animace">🔎</button>
+                </form>
+        </div>
         <form method="post" action="{% url 'plant_care:perform-tasks' %}">
             {% csrf_token %}
-            <div class="d-flex justify-content-center align-items-center mb-4">
+            <div class="d-flex justify-content-center align-items-center mb-4 mt-4">
                 <table class="table table-striped table-hover table-bordered table-sm table-responsive"
                        style="width: 50%">
                     <thead class="table-success">
