--- a/src/plant_care/templates/404.html
+++ b/src/plant_care/templates/404.html
@@ -8,7 +8,7 @@
    <div class="container d-flex justify-content-center align-items-center" style="min-height: 70vh;">
         <div class="d-flex flex-column align-items-center w-100" style="max-width: 500px;">
             <div class="box highlight">
-              <h1 class="text-center text-success mb-4">Oops! Page not found.</h1>
+              <h1 class="view-header fs-1 text-center text-success mb-4">Oops! Page not found.</h1>
                 <p class="text-center">Sorry, the page you're looking for does not exist...</p>
                 <p class="text-center">Don't worry, you can go back to the <strong><a href="{% url 'home-page' %}" class="text-decoration-none text-success">home page</a></strong> and start again.</p>
                 <br>
