--- a/src/plant_care/templates/plant_listing_page_template.html
+++ b/src/plant_care/templates/plant_listing_page_template.html
@@ -18,8 +18,8 @@
                 </div>
 
                 <div class="d-flex justify-content-end w-75">
-                    <form method="get" class="d-flex" style="width: auto;" action="{% url 'plant_care:plant-list' %}">
-                        <input type="text" name="filter" placeholder="Search plant or group"
+                    <form method="get" class="d-flex" style="width: auto;" action="{% if group %}{% url 'plant_care:plants-in-group-list' group.pk %}{% else %}{% url 'plant_care:plant-list' %}{% endif %}">
+                        <input type="text" name="filter" placeholder="{% if group %}Search plant{% else %} Search plant or group"{% endif %}
                                value="{{ request.GET.filter }}" class="text-center form-control">
                         <button type="submit" class="btn ms-2 btn-animace">🔎</button>
                     </form>
