--- a/src/plant_care/templates/plant_update_page_template.html
+++ b/src/plant_care/templates/plant_update_page_template.html
@@ -8,7 +8,7 @@
 
 {% block content %}
     <div class="container mt-5 mb-5">
-        <h1 class="view-header text-center">Update plant details </h1>
+        <p class="view-header text-center fs-3 m-0">Update plant details </p>
         <div class="col-md-6 mx-auto">
             <form method="post" action=".">
                 {% csrf_token %}
